--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,3 @@
- [webservers]
+[webservers]
 vm1 ansible_host=158.160.16.46 ansible_user=generalitalics
-vm2 ansible_host=84.201.152.243 ansible_user=generalitalics
+; vm2 ansible_host=84.201.152.243 ansible_user=generalitalics
