--- a/playbook.yml
+++ b/playbook.yml
@@ -20,8 +20,7 @@
         src: nginx.conf
         dest: ./nginx.conf
 
-    - name: Create a network
-      community.docker.docker_network:
+    - community.docker.docker_network:
         name: my_network
 
     - community.docker.docker_container:
