--- a/requirements.yml
+++ b/requirements.yml
@@ -1,5 +1,6 @@
 roles: 
   - name: geerlingguy.docker
   - name: geerlingguy.pip
+  - name: datadog.datadog
 collections:
   - name: community.docker
