--- a/playbook.yml
+++ b/playbook.yml
@@ -11,7 +11,7 @@
     - name: Copy nginx config file
       ansible.builtin.copy:
         src: nginx.conf
-        dest: ./nginx.conf
+        dest: nginx/nginx.conf
 
     - community.docker.docker_network:
         name: my_network
@@ -21,31 +21,23 @@
         image: nginx
         restart_policy: always
         state: started
-        # env_file: /.env
         ports:
           - 80:80
           - 443:443
         volumes:
-          - ./nginx.conf:/etc/nginx/conf.d/default.conf
+          - nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
 
     - community.docker.docker_container:
-        name: redmine
-        # Обязательно указываем тег, который хотим деплоить
-        # Если образа на сервере нет, Ansible его автоматически скачает
+        name: redmineт
         image: redmine
-        # Подключаем супервизор
-        # Если контейнер остановится, например, из-за ошибок
-        # супервизор Docker его перезапустит
         restart_policy: always
-        # Запускаем, если не запущен
         state: started
-        # Делаем доступным снаружи
         ports:
           - 3000:3000
-        env: # Настраиваем
+        env:
           NODE_ENV: production
           REDMINE_HTTPS: "true"
           REDMINE_DB_POSTGRES: "{{REDMINE_DB_POSTGRES}}"
