--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,7 @@
     
     - name: Create directory
       file:
-        path: /nginx
+        path: ./nginx
         state: directory
 
     - name: Copy nginx config file
@@ -30,7 +30,7 @@
           - 80:80
           - 443:443
         volumes:
-          - nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
