--- a/playbook.yml
+++ b/playbook.yml
@@ -8,15 +8,15 @@
       ansible.builtin.pip:
         name: docker
     
-    - name: Create directory
-      file:
-        path: /nginx
-        state: directory
+#     - name: Create directory
+#       file:
+#         path: /nginx
+#         state: directory
 
     - name: Copy nginx config file
       ansible.builtin.copy:
         src: nginx.conf
-        dest: /nginx/nginx.conf
+        dest: /home/nginx/nginx.conf
 
     - community.docker.docker_network:
         name: my_network
@@ -30,7 +30,7 @@
           - 80:80
           - 443:443
         volumes:
-          - /nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+          - /home/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
