--- a/playbook.yml
+++ b/playbook.yml
@@ -16,7 +16,7 @@
     - name: Copy nginx config file
       ansible.builtin.copy:
         src: nginx.conf
-        dest: /home/nginx/nginx.conf
+        dest: /home/generalitalics/nginx/nginx.conf
 
     - community.docker.docker_network:
         name: my_network
@@ -30,7 +30,7 @@
           - 80:80
           - 443:443
         volumes:
-          - /home/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
