--- a/playbook.yml
+++ b/playbook.yml
@@ -33,7 +33,7 @@
           - 80:80
           - 443:443
         volumes:
-          - "/home/nginx.conf":"/etc/nginx/conf.d/default.conf"
+          - /home/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
