--- a/playbook.yml
+++ b/playbook.yml
@@ -15,7 +15,7 @@
 
     - name: Copy nginx config file
       ansible.builtin.copy:
-        src: nginx.conf
+        src: /project/code/nginx.conf
         dest: /home/nginx.conf
 
     - community.docker.docker_network:
