--- a/playbook.yml
+++ b/playbook.yml
@@ -36,7 +36,7 @@
           - 80:80
           - 443:443
         volumes:
-          - /home/nginx.conf:/etc/nginx/conf.d/default.conf
+          - /project/code/nginx.conf:/etc/nginx/conf.d/default.conf
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
