--- a/playbook.yml
+++ b/playbook.yml
@@ -36,7 +36,8 @@
           - 80:80
           - 443:443
         volumes:
-          - /project/code/nginx.conf:/etc/nginx/conf.d/default.conf
+#           - /project/code/nginx.conf:/etc/nginx/conf.d/default.conf
+          - /project/code/:/etc/nginx/conf.d/
           - /srv/docker/redmine/redmine/certs:/etc/nginx/certs
         networks:
           - name: my_network
